# botdetect-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
botdetect_cli/: __init__.py  cli.py  detector.py  reporter.py  scanner.py  tui.py
tests/: test_botdetect.py
