[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botdetect-cli"
version = "1.0.0"
description = "🔍 BotDetect-CLI - Lightweight Browser Automation Detection Signal Analysis Engine | 轻量级浏览器自动化检测信号分析引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
maintainers = [
    {name = "gitstq", email = "gitstq@users.noreply.github.com"}
]
keywords = [
    "bot-detection",
    "browser-automation",
    "web-scraping",
    "stealth",
    "fingerprint",
    "webdriver",
    "playwright",
    "selenium",
    "cli",
    "security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
playwright = [
    "playwright>=1.40.0"
]
selenium = [
    "selenium>=4.0.0"
]

[project.scripts]
botdetect = "botdetect_cli.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/botdetect-cli"
Documentation = "https://github.com/gitstq/botdetect-cli#readme"
Repository = "https://github.com/gitstq/botdetect-cli.git"
Issues = "https://github.com/gitstq/botdetect-cli/issues"
Changelog = "https://github.com/gitstq/botdetect-cli/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["botdetect_cli*"]

[tool.setuptools.package-data]
botdetect_cli = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
